Foryou Item Done

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,8 @@ dependencies {
 
     //gson
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    //image
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
 
