--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
         </activity>
         <activity android:name=".activity.DetailActivity">
         </activity>
-        <activity android:name=".activity.MainActivity">
+        <activity
+            android:name=".activity.MainActivity"
+        >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
