--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     //anko
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation "org.jetbrains.anko:anko-design:$anko_version"
+    //anko sqlite
+    implementation "org.jetbrains.anko:anko-sqlite:$anko_version"
 
     //gson
     implementation 'com.google.code.gson:gson:2.8.5'
