--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         buildConfigField "String", "BASE_URL", '"https://api.themoviedb.org/"'
         buildConfigField "String", "TMDB_API_KEY", '"20a3197e5ca08eec30783357b1832998"'
+        buildConfigField "String", "YT_API_KEY", '"AIzaSyByCHdTy12orIknaLI8mvfqLZo5myf4UPo"'
 
     }
     buildTypes {
@@ -48,4 +49,5 @@ dependencies {
 
     //image
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
 }
